# InvoiceAgentLite

./: .deps_hash  .gitignore  .replit  README.md  Start.command  Stop.command  app.py  installer.iss  launch.py  main.py  pyproject.toml  replit.md  requirements.txt  run.bat  stop.bat
.github/workflows/: build-windows.yml
attached_assets/: Pasted--InvoiceAgent-Lite-PDF-Google-FastAPI-Autoscale-Web-PDF--1756960587219_1756960587222.txt  Pasted-Add-a-self-serve-Google-Sheets-connection-to-InvoiceAgent-Lite-1-Dependencies-Ensure-gspread-1756964672365_1756964672368.txt  Pasted-Open-main-py-and-add-a-JP-invoice-extraction-rule-pack-then-wire-it-to-the-existing-PDF-upload-endp-1756964098249_1756964098252.txt  Pasted-Please-update-the-spec-and-code-with-the-following-locked-requirements-Apply-them-now-and-rebuild--1756961558616_1756961558618.txt  Pasted-You-are-editing-InvoiceAgent-Lite-Goal-make-true-multi-file-upload-on-upload-Keep-Flask-guni-1756971445512_1756971445514.txt  Pasted-You-are-editing-InvoiceAgent-Lite-upload-page-Fix-two-issues-A-Upload-button-stays-disabled-1756975689961_1756975689963.txt  Pasted-You-are-editing-my-Flask-app-InvoiceAgent-Lite-Fix-the-JS-parse-error-Invalid-or-unexpected-tok-1756974454530_1756974454533.txt  Pasted-You-are-editing-my-Flask-app-InvoiceAgent-Lite-Goal-Add-strict-validations-for-multi-file-upload-1756973461980_1756973461982.txt  Pasted-You-are-editing-my-app-InvoiceAgent-Lite-GOAL-Fix-three-issues-on-upload-Multiple-selection--1756969578226_1756969578228.txt  (+2 more)
data/: i18n.py
static/: upload.js
(+1 files in other folders)
