[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi==0.111.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2==0.2.0",
    "google-auth==2.34.0",
    "gspread==6.1.2",
    "gunicorn[gevent]>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.0",
    "werkzeug>=3.1.3",
    "oauth2client==4.1.3",
    "flask-cors>=6.0.1",
    "pydantic==2.7.4",
    "asgiref>=3.9.1",
    "a2wsgi>=1.10.10",
    "pdfminer-six==20231228",
    "pdfminer>=20191125",
    "pypdf2>=3.0.1",
]
