[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.9.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "flask-cors>=6.0.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "gunicorn>=23.0.0",
    "pdfminer>=20191125",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "werkzeug>=3.1.3",
]
